Feature: Agregar imágenes y quitar Colección - Agregar wellcome.png en pantalla de bienvenida con animación float - Agregar menu-image.png en menú principal con animación bounce - Eliminar botón de Colección del menú (no implementado) - Actualizar service worker v4 con nuevas imágenes - Agregar estilos CSS para las nuevas imágenes

--- a/index.html
+++ b/index.html
@@ -39,12 +39,8 @@
     <div id="welcomeScreen" class="screen">
         <div class="welcome-container">
             <div class="welcome-header">
+                <img src="src/images/wellcome.png" alt="Mario Cards" class="welcome-image">
                 <h1 class="welcome-title">¡Bienvenido!</h1>
-                <div class="mario-icons">
-                    <span class="coin">🪙</span>
-                    <span class="mushroom">🍄</span>
-                    <span class="star">⭐</span>
-                </div>
             </div>
             
             <div class="input-container">
@@ -69,6 +65,7 @@
     <div id="mainMenu" class="screen">
         <div class="menu-container">
             <div class="menu-header">
+                <img src="src/images/menu-image.png" alt="Mario Cards" class="menu-image">
                 <h1 class="menu-title">Mario Cards</h1>
                 <p class="player-greeting">¡Hola, <span id="displayName" class="player-name-display"></span>!</p>
             </div>
@@ -82,21 +79,6 @@
                     <div class="btn-glow"></div>
                 </button>
 
-                <button class="menu-btn deck-btn" id="deckBtn">
-                    <div class="btn-content">
-                        <span class="btn-emoji">🃏</span>
-                        <span class="btn-label">Definir Mazo</span>
-                    </div>
-                    <div class="btn-glow"></div>
-                </button>
-
-                <button class="menu-btn collection-btn" id="collectionBtn">
-                    <div class="btn-content">
-                        <span class="btn-emoji">📚</span>
-                        <span class="btn-label">Colección</span>
-                    </div>
-                    <div class="btn-glow"></div>
-                </button>
 
                 <button class="menu-btn settings-btn" id="settingsBtn">
                     <div class="btn-content">
