Fix: Restaurar botón Definir Mazo - Solo debía eliminarse Colección, no el Mazo - Restaurado botón de Definir Mazo en menú principal

--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
                     <div class="btn-glow"></div>
                 </button>
 
+                <button class="menu-btn deck-btn" id="deckBtn">
+                    <div class="btn-content">
+                        <span class="btn-emoji">🃏</span>
+                        <span class="btn-label">Definir Mazo</span>
+                    </div>
+                    <div class="btn-glow"></div>
+                </button>
 
                 <button class="menu-btn settings-btn" id="settingsBtn">
                     <div class="btn-content">
